Added fonts awesome gem

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-<h1>home</h1>
+
+<div class="jumbotron text-center">
+  <h1>Welcome to MANA's STORE</h1>
+  <h3>A online store where you can find alot of goods you would like to have.</h3>
+</div>
